--- a/app/src/main/res/layout/activity_account_switch.xml
+++ b/app/src/main/res/layout/activity_account_switch.xml
@@ -10,6 +10,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="2dp" />
 </LinearLayout>
