--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -207,6 +207,7 @@
     <color name="tran_black4">#EE000000</color>
     <color name="tran_black5">#40000000</color>
     <color name="tran_black6">#10000000</color>
+    <color name="tran_black7">#05000000</color>
     <color name="tran_white1">#90ffffff</color>
     <color name="tran_white2">#30ffffff</color>
     <color name="white2">#f5f9fa</color>
