--- a/app/src/main/res/layout/activity_search_record.xml
+++ b/app/src/main/res/layout/activity_search_record.xml
@@ -123,10 +123,12 @@
 
             <!-- 热搜主播 -->
             <LinearLayout
+                android:id="@+id/ll_hot_anchor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="35dp"
-                android:orientation="vertical">
+                android:layout_marginTop="30dp"
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <ImageView
                     android:layout_width="wrap_content"
