--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -279,11 +279,46 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/ll_black_room"
+                        android:id="@+id/ll_red_bag"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="11.5dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/bg_red_bag_live"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:visibility="visible">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_black_room_live" />
+
+                        <TextView
+                            android:id="@+id/tv_red_bag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4.5dp"
+                            android:textColor="#FFFF5D05"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="3.5dp"
+                            android:layout_marginRight="5dp"
+                            android:text="萌币"
+                            android:textColor="#FF323232"
+                            android:textSize="11sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/ll_black_room"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/ll_red_bag"
+                        android:layout_marginLeft="11.5dp"
+                        android:layout_marginTop="2dp"
                         android:background="@drawable/bg_black_room_live"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
