--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -225,4 +225,6 @@
 
     <color name="week_star_blue">#4295ff</color>
     <color name="text_color_draw_layout">#ffffff</color>
+    <color name="statusbar_black">#181818</color>
+    <color name="red_bag">#ff2626</color>
 </resources>
