--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -411,4 +411,25 @@
         <item name="android:thumb">@drawable/switch_thumb_play_notify_selector</item>
         <item name="android:track">@drawable/switch_play_notify</item>
     </style>
+
+    <style name="Red_Bag_Tab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">#000000</item>
+        <item name="tabIndicatorHeight">0dp</item>
+        <item name="android:textAllCaps">true</item>
+        <!--<selectedItem name="tabIndicatorColor">@android:color/white</selectedItem>-->
+        <!--<item name="tabPaddingStart">15dp</item>-->
+        <!--<item name="tabPaddingEnd">15dp</item>-->
+        <item name="tabBackground">@color/appBg</item>
+        <item name="tabTextAppearance">@style/Red_Bag_TabText</item>
+        <item name="tabSelectedTextColor">@color/red_bag</item>
+        <item name="tabGravity">fill</item>
+    </style>
+
+    <style name="Red_Bag_TabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#757575</item>
+        <!--<selectedItem name="android:textColor">@android:color/white</selectedItem>-->
+        <item name="textAllCaps">true</item>
+        <!--<item name="android:textStyle">bold</item>-->
+    </style>
 </resources>
