--- a/app/src/main/res/layout/fragment_red_bag.xml
+++ b/app/src/main/res/layout/fragment_red_bag.xml
@@ -19,10 +19,8 @@
             android:background="@drawable/bg_edit_red_bag"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingBottom="12dp"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="12dp">
+            android:paddingRight="16dp">
 
             <TextView
                 android:id="@+id/tv_money"
@@ -36,13 +34,15 @@
                 android:id="@+id/et_money"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6.5dp"
-                android:layout_marginRight="6.5dp"
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="end"
                 android:hint="2000"
                 android:inputType="number"
+                android:paddingBottom="12dp"
+                android:paddingLeft="6.5dp"
+                android:paddingRight="6.5dp"
+                android:paddingTop="12dp"
                 android:textColor="#323232"
                 android:textSize="14.5sp" />
 
@@ -63,10 +63,8 @@
             android:background="@drawable/bg_edit_red_bag"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingBottom="12dp"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="12dp">
+            android:paddingRight="16dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -79,20 +77,22 @@
                 android:id="@+id/et_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6.5dp"
-                android:layout_marginRight="6.5dp"
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="end"
-                android:hint="5"
                 android:inputType="number"
+                android:paddingBottom="12dp"
+                android:paddingLeft="6.5dp"
+                android:paddingRight="6.5dp"
+                android:paddingTop="12dp"
+                android:hint="5"
                 android:textColor="#323232"
                 android:textSize="14.5sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="币"
+                android:text="个"
                 android:textColor="#323232"
                 android:textSize="14.5sp" />
         </LinearLayout>
