--- a/app/src/main/res/layout/fragment_red_bag.xml
+++ b/app/src/main/res/layout/fragment_red_bag.xml
@@ -39,6 +39,7 @@
                 android:gravity="end"
                 android:hint="2000"
                 android:inputType="number"
+                android:maxLength="8"
                 android:paddingBottom="12dp"
                 android:paddingLeft="6.5dp"
                 android:paddingRight="6.5dp"
@@ -80,12 +81,13 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="end"
+                android:hint="5"
                 android:inputType="number"
+                android:maxLength="8"
                 android:paddingBottom="12dp"
                 android:paddingLeft="6.5dp"
                 android:paddingRight="6.5dp"
                 android:paddingTop="12dp"
-                android:hint="5"
                 android:textColor="#323232"
                 android:textSize="14.5sp" />
 
@@ -105,7 +107,7 @@
             android:layout_marginTop="21.5dp"
             android:drawableLeft="@drawable/ic_money_red_bag"
             android:drawablePadding="9.5dp"
-            android:text="100000"
+            android:text="0"
             android:textColor="#ff5705"
             android:textSize="20sp"
             android:textStyle="bold" />
