--- a/app/src/main/res/layout/item_play_notify.xml
+++ b/app/src/main/res/layout/item_play_notify.xml
@@ -76,7 +76,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="12dp" />
+            android:layout_marginRight="12dp"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <View
