--- a/app/src/main/res/layout/activity_binding_phone.xml
+++ b/app/src/main/res/layout/activity_binding_phone.xml
@@ -149,14 +149,14 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_next"
+        android:id="@+id/btn_confirm"
         android:layout_width="166dp"
         android:layout_height="42dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="35dp"
         android:background="@drawable/selector_btn_yellow"
         android:enabled="false"
-        android:text="@string/next"
+        android:text="确认绑定"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
