--- a/app/src/main/res/layout/activity_change_phone.xml
+++ b/app/src/main/res/layout/activity_change_phone.xml
@@ -27,9 +27,9 @@
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/tv_old_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1212121212"
             android:textColor="@color/text_red"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
@@ -58,7 +58,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/et_binding_phone"
+                android:id="@+id/et_old_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="11dp"
@@ -131,14 +131,14 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_register"
+        android:id="@+id/btn_next"
         android:layout_width="166dp"
         android:layout_height="42dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="35dp"
         android:background="@drawable/selector_btn_yellow"
         android:enabled="false"
-        android:text="确认绑定"
+        android:text="下一步"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
