--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,7 +66,8 @@
 
                         <EditText
                             android:id="@+id/et_phone"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="10dp"
                             android:background="@null"
@@ -77,6 +78,12 @@
                             android:textColorHint="#B9B9B9"
                             android:textSize="13sp" />
 
+                        <ImageButton
+                            android:id="@+id/ib_clean_phone"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_marginRight="7dp"
+                            android:background="@drawable/ic_search_close" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -165,7 +172,8 @@
 
                         <EditText
                             android:id="@+id/et_password"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="10dp"
@@ -176,6 +184,12 @@
                             android:textColorHint="#B9B9B9"
                             android:textSize="13sp" />
 
+                        <ImageButton
+                            android:id="@+id/ib_clean_psw"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_marginRight="7dp"
+                            android:background="@drawable/ic_search_close" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
