--- a/app/src/main/res/layout/activity_search_record.xml
+++ b/app/src/main/res/layout/activity_search_record.xml
@@ -16,7 +16,7 @@
 
         <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_weight="1"
             android:focusable="true"
             android:focusableInTouchMode="true">
@@ -24,7 +24,7 @@
             <EditText
                 android:id="@+id/et_search"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="12dp"
                 android:background="@drawable/shape_bg_search"
                 android:drawableLeft="@drawable/ic_search_anchor"
@@ -32,9 +32,7 @@
                 android:hint="请输入主播昵称或房间ID"
                 android:imeOptions="actionSearch"
                 android:paddingLeft="7dp"
-                android:paddingTop="12dp"
                 android:paddingRight="30dp"
-                android:paddingBottom="12dp"
                 android:singleLine="true"
                 android:textColor="#505050"
                 android:textSize="14sp" />
@@ -117,8 +115,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
-                    android:layout_marginRight="12dp"
-                    android:layout_marginTop="18dp" />
+                    android:layout_marginTop="18dp"
+                    android:layout_marginRight="12dp" />
             </LinearLayout>
 
             <!-- 热搜主播 -->
