--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -59,8 +59,8 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="15dp"
             android:background="@null"
             android:scaleType="fitXY"
             android:src="@drawable/edit" />
@@ -69,8 +69,8 @@
             android:id="@+id/btn_switch"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
             android:layout_toLeftOf="@id/btn_edit"
             android:background="@null"
             android:scaleType="fitXY"
@@ -82,46 +82,103 @@
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:background="#f9f9f9"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="萌币"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_mengbi_amount"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:drawablePadding="6dp"
-                android:drawableTop="@drawable/mengbi_me"
-                android:gravity="center_horizontal"
-                android:paddingTop="10dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:singleLine="true"
                 android:textColor="#f39c10"
+                android:layout_marginTop="5dp"
                 android:textSize="12sp" />
 
-            <View style="@style/me_horizontal_divider" />
-        </RelativeLayout>
+        </LinearLayout>
 
-        <RelativeLayout
+        <View
+            android:layout_width="1dp"
+            android:layout_height="32dp"
+            android:background="#d9d9d9"
+            android:layout_gravity="center_vertical"/>
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/tv_mengdou_amount"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/mengdian"
-                android:gravity="center_horizontal"
-                android:paddingTop="5dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="萌豆"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_mengdou"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:singleLine="true"
                 android:textColor="#f39c10"
+                android:layout_marginTop="5dp"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="32dp"
+            android:background="#d9d9d9"
+            android:layout_gravity="center_vertical"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="萌点"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_mengdian"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:singleLine="true"
+                android:textColor="#f39c10"
+                android:layout_marginTop="5dp"
                 android:textSize="12sp" />
 
-            <View style="@style/me_horizontal_divider" />
-
-        </RelativeLayout>
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -255,6 +312,7 @@
             android:src="@drawable/arrowright" />
 
         <TextView
+            android:id="@+id/tv_bind_phone"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
@@ -271,10 +329,10 @@
         android:layout_marginLeft="15dp" />
 
     <TextView
-        android:id="@+id/tv_setting"
+        android:id="@+id/tv_composite"
         style="@style/me_option_item"
-        android:drawableLeft="@drawable/settings"
-        android:text="设置" />
+        android:drawableLeft="@drawable/ic_composite"
+        android:text="物品合成" />
 
     <View
         android:layout_width="match_parent"
@@ -282,9 +340,8 @@
         android:layout_marginLeft="15dp" />
 
     <TextView
-        android:id="@+id/tv_composite"
+        android:id="@+id/tv_setting"
         style="@style/me_option_item"
-        android:drawableLeft="@drawable/ic_composite"
-        android:text="物品合成" />
-
+        android:drawableLeft="@drawable/settings"
+        android:text="设置" />
 </LinearLayout>
