--- a/app/src/main/res/layout/fragment_follow_main.xml
+++ b/app/src/main/res/layout/fragment_follow_main.xml
@@ -20,7 +20,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/main_tab_color">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_follow"
