--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -105,7 +105,7 @@
         <!--<selectedItem name="tabIndicatorColor">@android:color/white</selectedItem>-->
         <!--<item name="tabPaddingStart">15dp</item>-->
         <!--<item name="tabPaddingEnd">15dp</item>-->
-        <item name="tabBackground">@color/white</item>
+        <item name="tabBackground">@color/main_tab_color</item>
         <item name="tabTextAppearance">@style/RankTabText</item>
         <item name="tabSelectedTextColor">#2cd996</item>
         <item name="tabGravity">fill</item>
@@ -397,7 +397,7 @@
 
     <style name="HomeFollowTab" parent="Widget.Design.TabLayout">
         <item name="tabIndicatorHeight">2.5dp</item>
-        <item name="tabBackground">@color/white</item>
+        <item name="tabBackground">@color/main_tab_color</item>
         <item name="tabIndicatorColor">#ffd634</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">#40000000</item>
