--- a/app/src/main/res/drawable/bg_red_bag_live.xml
+++ b/app/src/main/res/drawable/bg_red_bag_live.xml
@@ -3,7 +3,9 @@
     android:shape="rectangle">
 
     <corners
+        android:bottomLeftRadius="5dp"
         android:bottomRightRadius="1dp"
+        android:topLeftRadius="5dp"
         android:topRightRadius="1dp" />
     <solid android:color="#f9e2af" />
 </shape>
